opencv funcionando con  contextos

--- a/modules/percepction/CMakeLists.txt
+++ b/modules/percepction/CMakeLists.txt
@@ -20,7 +20,8 @@ include_directories(${PROJECT_SOURCE_DIR}/include
                     ${OpenCV_INCLUDE_DIRS})
 
 add_executable(${PROJECTNAME} ${folder_header} ${folder_source})
-target_link_libraries(${PROJECTNAME} ${YARP_LIBRARIES} ${OpenCV_LIBRARIES})
+#target_link_libraries(${PROJECTNAME} ${YARP_LIBRARIES} ${OpenCV_LIBRARIES})
+target_link_libraries(${PROJECTNAME} ${YARP_LIBRARIES} opencv_features2d opencv_flann opencv_imgproc opencv_core)
 install(TARGETS ${PROJECTNAME} DESTINATION bin)
 
 yarp_install(FILES ${doc_files} DESTINATION "share/iCub/modules")
