script de ejecución de jacub

--- a/contexts/jacub/config.ini
+++ b/contexts/jacub/config.ini
@@ -1,2 +1,4 @@
 robot  jacub
-perceptual_memory	/home/miguel/eclipse-workspace/jacub/memory/perception.json
+perceptual_memory	memory/perception.json
+kb memory/kb.json
+head_rot_angle 10
