Atención con acciones changeAttention

--- a/contexts/jacub/config.ini
+++ b/contexts/jacub/config.ini
@@ -2,3 +2,6 @@ robot  jacub
 perceptual_memory	memory/perception.json
 kb memory/kb2.json
 head_rot_angle 10
+movement_saliency 0.3
+brightness_saliency 0.2
+emotional_attachment_weight 0.4
