antes de modificar match parcial

--- a/contexts/jacub/config.ini
+++ b/contexts/jacub/config.ini
@@ -1,7 +1,10 @@
 robot  jacub
 perceptual_memory	memory/perception.json
-kb memory/kb2.json
-head_rot_angle 10
-movement_saliency 0.3
+kb memory/kb_prueba2.json
+delta_angle 10
+delta_coord 0.05
+movement_saliency 0.5
 brightness_saliency 0.2
-emotional_attachment_weight 0.4
+emotional_attachment_weight 0.3
+NBored 10
+PBored 0
