--- a/contexts/simConfig/iCub_parts_activation.ini
+++ b/contexts/simConfig/iCub_parts_activation.ini
@@ -4,12 +4,12 @@ elevation off
 startHomePos on
 
 [PARTS]
-legs on
+legs off
 torso on
 left_arm on
 left_hand on
 right_arm on
-right_hand on
+right_hand off
 head on
 fixed_hip on
 
@@ -18,7 +18,7 @@ self_collisions off
 covers_collisions off
 
 [SENSORS]
-pressure off
+pressure on
 whole_body_skin_emul off
 
 [VISION]
@@ -29,7 +29,7 @@ objects on
 screen off
 
 head_cover on
-legs_covers on
+legs_covers off
 torso_covers on
 left_arm_covers on
 right_arm_covers on
