--- a/contexts/simConfig/simulator.ini
+++ b/contexts/simConfig/simulator.ini
@@ -37,5 +37,6 @@ lowerArmCover      models/lowerArm.x
 rightPalm          models/rightPalm.x
 leftPalm           models/leftPalm.x
 
-lowerArmTexture    models/blueTexture.bmp
+//lowerArmTexture    models/blueTexture3.bmp
+//leftPalmTexture    models/blueTexture3.bmp
 model_path_default models
