--- a/contexts/simConfig/Sim_head.ini
+++ b/contexts/simConfig/Sim_head.ini
@@ -20,8 +20,9 @@ ampsToSensor 1000.0 1000.0 1000.0 1000.0 1000.0 1000.0
 ///other stuff like limitations torque and speed
 					
 [LIMITS]			 
-jntPosMax  30  60  55  15  52 90
-jntPosMin -40 -70 -55 -35 -50 -0
+//jntPosMax  30  60  55  15  52 90
+jntPosMax  5  60  25  15  52 90
+jntPosMin -50 -70 -25 -35 -50 -0
 											 
 error_tol 1 1 1 1 1 1
 
