--- a/contexts/simConfig/Sim_left_arm.ini
+++ b/contexts/simConfig/Sim_left_arm.ini
@@ -19,8 +19,12 @@ ampsToSensor 1000.0 1000.0 1000.0 1000.0 1000.0 1000.0 1000.0 1000.0 1000.0 1000
 ///other stuff like limitations torque and speed
 					
 [LIMITS]			 
-jntPosMax     10   160.8     80     106      90       0     40      60    90      90      180       90       180     90      180   270
-jntPosMin    -95    	 0     -37    15.5     -90     -90    -20      0    10       0        0        0         0      0        0     0     
+//jntPosMax     10   160.8     80     106      90       0     40      60    90      90      180       90       180     90      180   270
+//jntPosMin    -95    	 0     -37    15.5     -90     -90    -20      0    10       0        0        0         0      0        0     0     
+
+jntPosMax     10  		86      80     106      90       0     40      60    90      90      180       90       180     90      180   270
+jntPosMin    -10    	22     -37    15.5     -90     -90    -20      0    10       0        0        0         0      0        0     0     
+
 											 
 error_tol 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 
 
