--- a/contexts/simConfig/Sim_torso.ini
+++ b/contexts/simConfig/Sim_torso.ini
@@ -21,6 +21,9 @@ ampsToSensor 1000.0 1000.0 1000.0
 [LIMITS]			 
 jntPosMax  50  30  70
 jntPosMin -50 -30 -10
+
+//jntPosMax  7 0  0
+//jntPosMin -7 0  10
 											 
 error_tol 1 1 1
 
