--- a/contexts/skinGui/skinManLeft.ini
+++ b/contexts/skinGui/skinManLeft.ini
@@ -1,10 +1,6 @@
-inputPorts (    /icub/skin/left_hand          \
-                /icub/skin/left_forearm       \
-                /icub/skin/left_arm           )
+inputPorts (    /icubSim/skin/left_hand_comp)
 
-outputPorts (   /icub/skin/left_hand_comp     \
-                /icub/skin/left_forearm_comp  \
-                /icub/skin/left_arm_comp      )
+outputPorts (   /skinMan/left_hand_comp )
 
 period	                    20
 minBaseline                 3
@@ -18,10 +14,8 @@ smoothFilter
 smoothFactor                0.5
 
 [SKIN_EVENTS]
-skinParts           ( 1 2 3 )
-taxelPositionFiles  (   positions/left_hand_V2_1.txt           \
-                        positions/left_forearm_mesh.txt   \
-                        positions/left_arm_mesh.txt       )
+skinParts           ( 1 )
+taxelPositionFiles  (   positions/left_hand_V2_1.txt )
 maxNeighborDist	0.015
 
 %enum SkinPart: UNKNOWN_SKIN_PART=0, LEFT_HAND, LEFT_FOREARM, LEFT_UPPER_ARM, RIGHT_HAND, RIGHT_FOREARM, RIGHT_UPPER_ARM, FRONT_TORSO
