previo a modificaciones de movimiento

--- a/contexts/simulator.ini
+++ b/contexts/simulator.ini
@@ -33,7 +33,8 @@ waistCover         models/hip.x
 torsoCover         models/torso.x
 rightUpperArmCover models/rightUpperArm.x
 leftUpperArmCover  models/leftUpperArm.x
-lowerArmCover      models/lowerArm.x
+//lowerArmCover      models/lowerArm.x
+lowerArmCover      models/mod2.y
 rightPalm          models/rightPalm.x
 leftPalm           models/leftPalm.x
 
