--- a/contexts/simConfig/Sim_head.ini
+++ b/contexts/simConfig/Sim_head.ini
@@ -19,10 +19,12 @@ ampsToSensor 1000.0 1000.0 1000.0 1000.0 1000.0 1000.0
 
 ///other stuff like limitations torque and speed
 					
-[LIMITS]			 
+[LIMITS]
+//jntPosMax  up-down  60  left-right  15  52 90
+			 
 //jntPosMax  30  60  55  15  52 90
-jntPosMax  5  60  25  15  52 90
-jntPosMin -50 -70 -25 -35 -50 -0
+jntPosMax  5  60  50  15  52 90
+jntPosMin -50 -70 -50 -35 -50 -0
 											 
 error_tol 1 1 1 1 1 1
 
