kb para tercer periodo de pruebas

--- a/contexts/jacub/config.ini
+++ b/contexts/jacub/config.ini
@@ -1,10 +1,13 @@
 robot  jacub
 perceptual_memory	memory/perception.json
-kb memory/kb_prueba2.json
+kb memory/kb_prueba3.json
 delta_angle 10
 delta_coord 0.05
-movement_saliency 0.5
+movement_saliency 0.3
 brightness_saliency 0.2
 emotional_attachment_weight 0.3
+center_weight = 2.0
+
 NBored 10
 PBored 0
+forgetAfter 2
