--- a/contexts/simConfig/iCub_parts_activation.ini
+++ b/contexts/simConfig/iCub_parts_activation.ini
@@ -8,8 +8,8 @@ legs off
 torso on
 left_arm on
 left_hand on
-right_arm on
-right_hand off
+right_arm off
+right_hand on
 head on
 fixed_hip on
 
@@ -25,11 +25,11 @@ whole_body_skin_emul off
 cam on
 
 [RENDER]
-objects on
+objects off
 screen off
 
 head_cover on
-legs_covers off
+legs_covers on
 torso_covers on
 left_arm_covers on
 right_arm_covers on
