--- a/contexts/simConfig/Sim_left_arm.ini
+++ b/contexts/simConfig/Sim_left_arm.ini
@@ -10,7 +10,7 @@ Type 1 /// 1 is for the left arm  ///2 is for the right....
 TotalJoints 16 //total number of joints....
 
 AxisMap 0 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 
-Vel 20.0
+Vel 40.0
 Zeros 0.0 0.0 0.0 0.0 0.0 0.0 0.0 0.0 0.0 0.0 0.0 0.0 0.0 0.0 0.0 0.0
 Encoder 0.0174533 0.0174533 0.0174533 0.0174533 0.0174533 0.0174533 0.0174533 0.0174533 0.0174533 0.0174533 0.0174533 0.0174533 0.0174533 0.0174533 0.0174533 0.0174533
 fullscalePWM 8.0 8.0 8.0 8.0 8.0 8.0 8.0 8.0 8.0 8.0 8.0 8.0 8.0 8.0 8.0 8.0
@@ -22,8 +22,12 @@ ampsToSensor 1000.0 1000.0 1000.0 1000.0 1000.0 1000.0 1000.0 1000.0 1000.0 1000
 //jntPosMax     10   160.8     80     106      90       0     40      60    90      90      180       90       180     90      180   270
 //jntPosMin    -95    	 0     -37    15.5     -90     -90    -20      0    10       0        0        0         0      0        0     0     
 
-jntPosMax     10  		86      80     106      90       0     40      60    90      90      180       90       180     90      180   270
-jntPosMin    -10    	22     -37    15.5     -90     -90    -20      0    10       0        0        0         0      0        0     0     
+jntPosMax     -40   70     50     106      27       0     0      60    90      90      180       90       180     90      180   270
+jntPosMin    -60    	 0     -37    15.5     0     0    0      0    10       0        0        0         0      0        0     0     
+
+
+//jntPosMax     10  		86      80     106      90       0     40      60    90      90      180       90       180     90      180   270
+//jntPosMin    -10    	22     -37    15.5     -90     -90    -20      0    10       0        0        0         0      0        0     0     
 
 											 
 error_tol 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 
