--- a/contexts/simConfig/simulator.ini
+++ b/contexts/simConfig/simulator.ini
@@ -34,7 +34,7 @@ torsoCover         models/torso.x
 rightUpperArmCover models/rightUpperArm.x
 leftUpperArmCover  models/leftUpperArm.x
 //lowerArmCover      models/lowerArm.x
-lowerArmCover      models/mod2.x
+lowerArmCover      models/lowerArm.x
 rightPalm          models/rightPalm.x
 leftPalm           models/leftPalm.x
 
