--- a/contexts/simConfig/ode_params.ini
+++ b/contexts/simConfig/ode_params.ini
@@ -25,7 +25,7 @@ maxContactCorrectingVel 1000
 //Contact joints can simulate friction at the contact by applying special forces in the two friction directions that are perpendicular to the normal.
 //This value sets the friction coefficient, mju, for both directions. High means that the colliding surfaces will not slide along one another. 
 //0.0 means that they will slip along one another with no resistance.  
-contactFrictionCoefficient 10000.0
+contactFrictionCoefficient 1000000000.0
 
 // Contacts are allowed to sink into the surface layer up to the given depth before coming to rest. 
 // The default value is zero. Increasing this to some small value (e.g. 0.001) can help prevent jittering 
