--- a/contexts/simConfig/simulator.ini
+++ b/contexts/simConfig/simulator.ini
@@ -32,9 +32,10 @@ upperLeftLegCover  models/leftUpperLeg.x
 waistCover         models/hip.x
 torsoCover         models/torso.x
 rightUpperArmCover models/rightUpperArm.x
+//leftUpperArmCover  models/leftUpperArm.x
 leftUpperArmCover  models/leftUpperArm.x
 //lowerArmCover      models/lowerArm.x
-lowerArmCover      models/lowerArm.x
+lowerArmCover      models/m.x
 rightPalm          models/rightPalm.x
 leftPalm           models/leftPalm.x
 
